--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="FunctionBodyBuilder.hpp" />
     <ClInclude Include="FunctionExecutionUtility.hpp" />
     <ClInclude Include="FunctionUtility.hpp" />
+    <ClInclude Include="Generic\GenericInstantiationUtility.hpp" />
     <ClInclude Include="IntermidiateRepresentationEmmiter.hpp" />
     <ClInclude Include="PackageBuildUtility.hpp" />
     <ClInclude Include="PackageDiscoveryUtility.hpp" />
@@ -55,6 +56,7 @@
     <ClCompile Include="FunctionBodyBuilder.cpp" />
     <ClCompile Include="FunctionExecutionUtility.cpp" />
     <ClCompile Include="FunctionUtility.cpp" />
+    <ClCompile Include="Generic\GenericInstantiationUtility.cpp" />
     <ClCompile Include="IntermidiateRepresentationEmmiter.cpp" />
     <ClCompile Include="PackageBuildUtility.cpp" />
     <ClCompile Include="PackageDiscoveryUtility.cpp" />
