--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Generic">
+      <UniqueIdentifier>{56a4cc8c-3a34-4aee-9fa1-cfa28987505e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,6 +60,9 @@
     <ClInclude Include="StatementEvaluator.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Generic\GenericInstantiationUtility.hpp">
+      <Filter>Header Files\Generic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
@@ -96,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StatementEvaluator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Generic\GenericInstantiationUtility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
