--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
@@ -21,14 +21,17 @@
   <ItemGroup>
     <ClInclude Include="AttributeUtility.hpp" />
     <ClInclude Include="BuiltInPackageBuildUtility.hpp" />
+    <ClInclude Include="CompilerInterface.hpp" />
     <ClInclude Include="CompileTimeFunctions\CompileTimeFunction.hpp" />
     <ClInclude Include="CompileTimeFunctions\CompileTimeFunctionDictionary.hpp" />
     <ClInclude Include="CompileTimeFunctions\CompileTimeAllocate.hpp" />
     <ClInclude Include="CompileTimeFunctions\FunctionLibrary.hpp" />
     <ClInclude Include="CompileTimeFunctions\MarkCompileTimeOnly.hpp" />
     <ClInclude Include="CompileTimeFunctions\Print.hpp" />
+    <ClInclude Include="CompileTimeFunctions\RaiseError.hpp" />
     <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerFunction.hpp" />
     <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerType.hpp" />
+    <ClInclude Include="CompileTimeFunctions\ReplaceWithExternalSymbol.hpp" />
     <ClInclude Include="CompileTimeInfrastrucutre\CompileTimeHeap.hpp" />
     <ClInclude Include="IntermidiateRepresentationBuilder.hpp" />
     <ClInclude Include="LiteralUtility.hpp" />
@@ -36,6 +39,7 @@
     <ClInclude Include="NameResolver.hpp" />
     <ClInclude Include="NamespaceBuilder.hpp" />
     <ClInclude Include="OverloadResolutionUtility.hpp" />
+    <ClInclude Include="RuntimeTypesConversionUtility.hpp" />
     <ClInclude Include="SpecialFunctionUtility.hpp" />
     <ClInclude Include="SpecialTypes\SpecialTypeLibrary.hpp" />
     <ClInclude Include="TypeInstantiationUtility.hpp" />
@@ -48,19 +52,23 @@
   <ItemGroup>
     <ClCompile Include="AttributeUtility.cpp" />
     <ClCompile Include="BuiltInPackageBuildUtility.cpp" />
+    <ClCompile Include="CompilerInterface.cpp" />
     <ClCompile Include="CompileTimeFunctions\CompileTimeAllocate.cpp" />
     <ClCompile Include="CompileTimeFunctions\CompileTimeFunctionDictionary.cpp" />
     <ClCompile Include="CompileTimeFunctions\FunctionLibrary.cpp" />
     <ClCompile Include="CompileTimeFunctions\MarkCompileTimeOnly.cpp" />
     <ClCompile Include="CompileTimeFunctions\Print.cpp" />
+    <ClCompile Include="CompileTimeFunctions\RaiseError.cpp" />
     <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerFunction.cpp" />
     <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerType.cpp" />
+    <ClCompile Include="CompileTimeFunctions\ReplaceWithExternalSymbol.cpp" />
     <ClCompile Include="CompileTimeInfrastrucutre\CompileTimeHeap.cpp" />
     <ClCompile Include="LiteralUtility.cpp" />
     <ClCompile Include="MetatypeUility.cpp" />
     <ClCompile Include="NameResolver.cpp" />
     <ClCompile Include="NamespaceBuilder.cpp" />
     <ClCompile Include="OverloadResolutionUtility.cpp" />
+    <ClCompile Include="RuntimeTypesConversionUtility.cpp" />
     <ClCompile Include="SpecialFunctionUtility.cpp" />
     <ClCompile Include="SpecialTypes\SpecialTypeLibrary.cpp" />
     <ClCompile Include="TypeInstantiationUtility.cpp" />
