--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -18,71 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="AttributeUtility.hpp" />
-    <ClInclude Include="BuiltInPackageBuildUtility.hpp" />
-    <ClInclude Include="CompilerInterface.hpp" />
-    <ClInclude Include="CompileTimeFunctions\CompileTimeFunction.hpp" />
-    <ClInclude Include="CompileTimeFunctions\CompileTimeFunctionDictionary.hpp" />
-    <ClInclude Include="CompileTimeFunctions\CompileTimeAllocate.hpp" />
-    <ClInclude Include="CompileTimeFunctions\FunctionLibrary.hpp" />
-    <ClInclude Include="CompileTimeFunctions\MarkCompileTimeOnly.hpp" />
-    <ClInclude Include="CompileTimeFunctions\Print.hpp" />
-    <ClInclude Include="CompileTimeFunctions\RaiseError.hpp" />
-    <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerFunction.hpp" />
-    <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerType.hpp" />
-    <ClInclude Include="CompileTimeFunctions\ReplaceWithExternalSymbol.hpp" />
-    <ClInclude Include="CompileTimeInfrastrucutre\CompileTimeHeap.hpp" />
-    <ClInclude Include="IntermidiateRepresentationBuilder.hpp" />
-    <ClInclude Include="IRUtility.hpp" />
-    <ClInclude Include="LiteralUtility.hpp" />
-    <ClInclude Include="MetatypeUility.hpp" />
-    <ClInclude Include="NameResolver.hpp" />
-    <ClInclude Include="NamespaceBuilder.hpp" />
-    <ClInclude Include="OverloadResolutionUtility.hpp" />
-    <ClInclude Include="RuntimeTypesConversionUtility.hpp" />
-    <ClInclude Include="SpecialFunctionUtility.hpp" />
-    <ClInclude Include="SpecialTypes\SpecialTypeLibrary.hpp" />
-    <ClInclude Include="TypeInstantiationUtility.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataStructures\DataStructures.vcxproj">
-      <Project>{024db03c-6b42-4915-a616-13f402d932ac}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="AttributeUtility.cpp" />
-    <ClCompile Include="BuiltInPackageBuildUtility.cpp" />
-    <ClCompile Include="CompilerInterface.cpp" />
-    <ClCompile Include="CompileTimeFunctions\CompileTimeAllocate.cpp" />
-    <ClCompile Include="CompileTimeFunctions\CompileTimeFunctionDictionary.cpp" />
-    <ClCompile Include="CompileTimeFunctions\FunctionLibrary.cpp" />
-    <ClCompile Include="CompileTimeFunctions\MarkCompileTimeOnly.cpp" />
-    <ClCompile Include="CompileTimeFunctions\Print.cpp" />
-    <ClCompile Include="CompileTimeFunctions\RaiseError.cpp" />
-    <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerFunction.cpp" />
-    <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerType.cpp" />
-    <ClCompile Include="CompileTimeFunctions\ReplaceWithExternalSymbol.cpp" />
-    <ClCompile Include="CompileTimeInfrastrucutre\CompileTimeHeap.cpp" />
-    <ClCompile Include="IRUtility.cpp" />
-    <ClCompile Include="LiteralUtility.cpp" />
-    <ClCompile Include="MetatypeUility.cpp" />
-    <ClCompile Include="NameResolver.cpp" />
-    <ClCompile Include="NamespaceBuilder.cpp" />
-    <ClCompile Include="OverloadResolutionUtility.cpp" />
-    <ClCompile Include="RuntimeTypesConversionUtility.cpp" />
-    <ClCompile Include="SpecialFunctionUtility.cpp" />
-    <ClCompile Include="SpecialTypes\SpecialTypeLibrary.cpp" />
-    <ClCompile Include="TypeInstantiationUtility.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7c7ce242-0e30-44ad-8c49-5d27cab900b8}</ProjectGuid>
-    <RootNamespace>LanguageLogic</RootNamespace>
+    <ProjectGuid>{49d845cf-7d88-48d2-a179-88530fc67cd9}</ProjectGuid>
+    <RootNamespace>Utilities</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -96,6 +36,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -108,6 +49,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -144,9 +86,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
@@ -162,9 +104,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
@@ -173,16 +115,16 @@
       </SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
@@ -198,9 +140,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
@@ -209,17 +151,23 @@
       </SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClInclude Include="framework.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="pointer_cast.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets" Condition="Exists('..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets')" />
   </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets'))" />
-  </Target>
 </Project>
