--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
@@ -33,7 +33,7 @@
     <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerType.hpp" />
     <ClInclude Include="CompileTimeFunctions\ReplaceWithExternalSymbol.hpp" />
     <ClInclude Include="CompileTimeInfrastrucutre\CompileTimeHeap.hpp" />
-    <ClInclude Include="IntermidiateRepresentationBuilder.hpp" />
+    <ClInclude Include="ExpressionUtility.hpp" />
     <ClInclude Include="IRUtility.hpp" />
     <ClInclude Include="LiteralUtility.hpp" />
     <ClInclude Include="MetatypeUility.hpp" />
@@ -41,6 +41,7 @@
     <ClInclude Include="NamespaceBuilder.hpp" />
     <ClInclude Include="OverloadResolutionUtility.hpp" />
     <ClInclude Include="RuntimeTypesConversionUtility.hpp" />
+    <ClInclude Include="runtime_values.hpp" />
     <ClInclude Include="SpecialFunctionUtility.hpp" />
     <ClInclude Include="SpecialTypes\SpecialTypeLibrary.hpp" />
     <ClInclude Include="TypeInstantiationUtility.hpp" />
@@ -64,6 +65,7 @@
     <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerType.cpp" />
     <ClCompile Include="CompileTimeFunctions\ReplaceWithExternalSymbol.cpp" />
     <ClCompile Include="CompileTimeInfrastrucutre\CompileTimeHeap.cpp" />
+    <ClCompile Include="ExpressionUtility.cpp" />
     <ClCompile Include="IRUtility.cpp" />
     <ClCompile Include="LiteralUtility.cpp" />
     <ClCompile Include="MetatypeUility.cpp" />
