--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="execution\RuntimeFieldDescriptor.hpp" />
     <ClInclude Include="execution\RuntimeFunctionDescriptor.hpp" />
     <ClInclude Include="execution\RuntimeTypeDescriptor.hpp" />
+    <ClInclude Include="execution\RuntimeVariableDescriptor.hpp" />
     <ClInclude Include="execution\StringValue.hpp" />
     <ClInclude Include="Field.hpp" />
     <ClInclude Include="Function.hpp" />
@@ -231,6 +232,7 @@
     <ClCompile Include="execution\RuntimeFieldDescriptor.cpp" />
     <ClCompile Include="execution\RuntimeFunctionDescriptor.cpp" />
     <ClCompile Include="execution\RuntimeTypeDescriptor.cpp" />
+    <ClCompile Include="execution\RuntimeVariableDescriptor.cpp" />
     <ClCompile Include="execution\StringValue.cpp" />
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Generic\GenericObject.cpp" />
