--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -189,21 +189,7 @@
     <ClInclude Include="Generic\GenericVariable.hpp" />
     <ClInclude Include="Generic\TypePointer.hpp" />
     <ClInclude Include="INamedObject.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\AssigmentStatement.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\ExecutionContext.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IExpression.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\FunctionCall.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IExpressionVisitor.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IfElseStatement.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IInstruction.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IInstructionVisitor.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\IIRElement.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\INameGetter.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\MemberAccessExpression.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\ScopeTermination.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\ValueLiteralExpression.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\VariableDeclaration.hpp" />
-    <ClInclude Include="IntermidiateRepresentation\VariableReferenceExpression.hpp" />
+    <ClInclude Include="ISerializationManager.hpp" />
     <ClInclude Include="MetadataObject.hpp" />
     <ClInclude Include="Namespace.hpp" />
     <ClInclude Include="ObjectWithAccessibility.hpp" />
@@ -227,6 +213,7 @@
     <ClCompile Include="AttributeTarget.cpp" />
     <ClCompile Include="execution\ArrayValue.cpp" />
     <ClCompile Include="execution\IntegerValue.cpp" />
+    <ClCompile Include="execution\IRuntimeValue.cpp" />
     <ClCompile Include="execution\ObjectValue.cpp" />
     <ClCompile Include="execution\ReferenceValue.cpp" />
     <ClCompile Include="execution\RuntimeFieldDescriptor.cpp" />
@@ -237,15 +224,7 @@
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Generic\GenericObject.cpp" />
     <ClCompile Include="INamedObject.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\AssigmentStatement.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\FunctionCall.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\IfElseStatement.cpp" />
     <ClCompile Include="IntermidiateRepresentation\IIRElement.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\MemberAccessExpression.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\ScopeTermination.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\ValueLiteralExpression.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\VariableDeclaration.cpp" />
-    <ClCompile Include="IntermidiateRepresentation\VariableReferenceExpression.cpp" />
     <ClCompile Include="Namespace.cpp" />
     <ClCompile Include="QualifiedName.cpp" />
     <ClCompile Include="Target.cpp" />
