--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="pointer_cast.hpp" />
   </ItemGroup>
