--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="pointer_cast.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
