--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
@@ -48,7 +48,7 @@
     <ClInclude Include="runtime_values.hpp" />
     <ClInclude Include="SpecialFunctionUtility.hpp" />
     <ClInclude Include="SpecialTypes\SpecialTypeLibrary.hpp" />
-    <ClInclude Include="TypeCohersionUtility.hpp" />
+    <ClInclude Include="TypeCoercionUtility.hpp" />
     <ClInclude Include="TypeInstantiationUtility.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -82,7 +82,7 @@
     <ClCompile Include="RuntimeTypesConversionUtility.cpp" />
     <ClCompile Include="SpecialFunctionUtility.cpp" />
     <ClCompile Include="SpecialTypes\SpecialTypeLibrary.cpp" />
-    <ClCompile Include="TypeCohersionUtility.cpp" />
+    <ClCompile Include="TypeCoercionUtility.cpp" />
     <ClCompile Include="TypeInstantiationUtility.cpp" />
   </ItemGroup>
   <ItemGroup>
