--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="algorithm.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="pch.h" />
