--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="algorithm.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
